--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 altair==4.1.0
-appdirs==1.4.3
 argon2-cffi==21.1.0
 astor==0.8.1
 astropy==4.3.1
-attrs==19.3.0
-Automat==0.8.0
+attrs==21.2.0
 backcall==0.2.0
 backports.zoneinfo==0.2.1
 base58==2.1.0
@@ -14,90 +12,61 @@ boto3==1.18.59
 botocore==1.21.59
 bottle==0.12.19
 cachetools==4.2.4
-cairocffi==1.2.0
-certifi==2019.11.28
+certifi==2021.10.8
 cffi==1.14.6
-chardet==3.0.4
 charset-normalizer==2.0.7
-Click==7.0
-cloud-init==21.2
-colorama==0.4.3
-command-not-found==0.3
+click==7.1.2
+colorama==0.4.4
 conan==1.41.0
-conda==4.3.16
-configobj==5.0.6
 confuse==1.6.0
-constantly==15.1.0
-cryptography==2.8
 cycler==0.10.0
-dbus-python==1.2.16
 debugpy==1.5.0
 decorator==5.1.0
 defusedxml==0.7.1
-distlib==0.3.0
-distro==1.4.0
-distro-info===0.23ubuntu1
+distro==1.6.0
 entrypoints==0.3
 enum-compat==0.0.3
-fa2==0.3.5
 fasteners==0.16.3
-filelock==3.0.12
 gitdb==4.0.7
 GitPython==3.1.24
 htmlmin==0.1.12
-httplib2==0.14.0
-hyperlink==19.0.0
-idna==2.8
-importlib-metadata==1.5.0
-incremental==16.10.1
+idna==3.2
 ipykernel==6.4.1
 ipython==7.28.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
 jedi==0.18.0
-Jinja2==2.10.1
+Jinja2==2.11.3
 jmespath==0.10.0
 joblib==1.1.0
-jsonpatch==1.22
-jsonpointer==2.0
-jsonschema==3.2.0
+jsonschema==4.1.0
 jupyter-client==7.0.6
 jupyter-core==4.8.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.2
-keyring==18.0.1
 kiwisolver==1.3.2
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-MarkupSafe==1.1.0
+MarkupSafe==2.0.1
 matplotlib==3.3.0
 matplotlib-inline==0.1.3
 missingno==0.5.0
 mistune==0.8.4
-more-itertools==4.2.0
 nbclient==0.5.4
 nbconvert==6.2.0
 nbformat==5.1.3
 nest-asyncio==1.5.1
-netifaces==0.10.4
-networkx==2.6.3
 node-semver==0.6.1
 notebook==6.4.4
 numpy==1.18.5
-oauthlib==3.1.0
 packaging==21.0
 pandas==1.0.5
 pandas-profiling==2.3.0
 pandocfilters==1.5.0
 parso==0.8.2
 patch-ng==1.17.4
-pexpect==4.6.0
+pexpect==4.8.0
 phik==0.12.0
 pickleshare==0.7.5
 Pillow==8.3.2
-pipenv==11.9.0
 plotly==4.0.0
 pluginbase==1.0.1
 prometheus-client==0.11.0
@@ -105,72 +74,40 @@ prompt-toolkit==3.0.20
 protobuf==3.18.1
 ptyprocess==0.7.0
 pyarrow==5.0.0
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycosat==0.6.3
 pycparser==2.20
 pydeck==0.7.0
 pyerfa==2.0.0
-pygame==2.0.1
 Pygments==2.10.0
-PyGObject==3.36.0
-PyHamcrest==1.9.0
 PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
 pyparsing==2.4.7
-pyrsistent==0.15.5
-pyserial==3.4
-python-apt==2.0.0+ubuntu0.20.4.6
+pyrsistent==0.18.0
 python-dateutil==2.8.2
-python-debian===0.1.36ubuntu1
-python-igraph==0.9.6
 pytz==2021.3
-PyYAML==5.3.1
+PyYAML==5.4.1
 pyzmq==22.3.0
 requests==2.26.0
-requests-unixsocket==0.2.0
 retrying==1.3.3
-ruamel.yaml==0.17.16
-ruamel.yaml.clib==0.2.6
 s3transfer==0.5.0
 scikit-learn==0.24.1
 scipy==1.7.1
 seaborn==0.10.1
-SecretStorage==2.3.1
 Send2Trash==1.8.0
-service-identity==18.1.0
-simplejson==3.16.0
-six==1.14.0
+six==1.16.0
 smmap==4.0.0
-sos==4.1
-ssh-import-id==5.10
-streamlit==0.69.0
-systemd-python==234
+streamlit==1.0.0
 terminado==0.12.1
 testpath==0.5.0
-texttable==1.6.4
 threadpoolctl==3.0.0
 toml==0.10.2
 toolz==0.11.1
 tornado==6.1
-tqdm==4.62.2
+tqdm==4.62.3
 traitlets==5.1.0
-Twisted==18.9.0
 typing-extensions==3.10.0.2
 tzlocal==3.0
-ubuntu-advantage-tools==27.2
-ufw==0.36
-unattended-upgrades==0.1
 urllib3==1.26.7
 validators==0.18.2
-virtualenv==20.0.17
-virtualenv-clone==0.3.0
-wadllib==1.3.3
 watchdog==2.1.6
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
-zipp==1.0.0
-zope.interface==4.7.1
